crates/schema/tests/compile_fail/derive_reserved_wrong_form.stderr
error: #[schema(reserved)] requires list syntax: write `reserved("key")`, not `reserved = "key"`
 --> tests/compile_fail/derive_reserved_wrong_form.rs:6:10
  |
6 | #[schema(reserved = "old_key")]
  |          ^^^^^^^^

error[E0599]: no associated function or constant named `schema` found for struct `Bad` in the current scope
  --> tests/compile_fail/derive_reserved_wrong_form.rs:13:18
   |
 8 | struct Bad {
   | ---------- associated function or constant `schema` not found for this struct
...
13 |     let _ = Bad::schema();
   |                  ^^^^^^ associated function or constant not found in `Bad`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `schema`, perhaps you need to implement it:
           candidate #1: `HasSchema`
